Update “Beta” shield

--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -613,7 +613,7 @@
             </uib-tab>
             <uib-tab index="5" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="This tab is used to manage Web Application Firewall (WAF) settings for the domain">
               <!--  “WAF” -->
-              <uib-tab-heading>WAF <i class="fa  beta-functional" aria-hidden="true" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Betta functional"> &beta;</i></uib-tab-heading>
+              <uib-tab-heading>WAF <i class="label label-primary pull-right fa beta-functional" aria-hidden="true"> Beta</i></uib-tab-heading>
               <div class="form-group form-inline">
                 <label for="enableWafRules" class="col-sm-3 control-label">WAF Protection</label>
                 <div class="col-md-9">
@@ -647,7 +647,7 @@
             </uib-tab>
             <uib-tab index="7" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="This section allows you to enhance the service by running custom Lua code snippets on proxy servers">
               <!--  Lua Scripting -->
-              <uib-tab-heading> Lua Scripting <i class="fa  beta-functional" aria-hidden="true" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Betta functional"> &beta;</i></uib-tab-heading>
+              <uib-tab-heading> Lua Scripting <i class="label label-primary pull-right fa beta-functional"> Beta</i></uib-tab-heading>
                 <domain-lua-scripting class="form-group" ng-model="model"></domain-lua-scripting>
               <hr>
               <!--  // Lua Scripting -->
