--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -54,7 +54,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        {{$state.current.data.platform}} Apps List
+        {{$state.current.data.platform}} Apps List <i class="label label-primary fa beta-functional" aria-hidden="true"> Beta</i>
       </h2>
     </div>
   </div>
