--- a/code/dev/parts/logshippers/list.html
+++ b/code/dev/parts/logshippers/list.html
@@ -42,7 +42,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        Log Shipping Jobs
+        Log Shipping Jobs <i class="label label-primary pull-right fa beta-functional" aria-hidden="true"> Beta</i>
       </h2>
     </div>
   </div>
