account vendor change test

--- a/code/dev/parts/companies/change-vendor.html
+++ b/code/dev/parts/companies/change-vendor.html
@@ -17,10 +17,10 @@
   </form>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-default" type="button" ng-click="close()">
+  <button class="btn btn-default btn-cancel" type="button" ng-click="close()">
     <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
   </button>
-  <button class="btn btn-primary" type="button" ng-disabled="model.currentVendor === model.newVendor" ng-click="change()">
+  <button class="btn btn-primary btn-change" type="button" ng-disabled="model.currentVendor === model.newVendor" ng-click="change()">
     <i class="glyphicon glyphicon-pencil"></i> Change
   </button>
 </div>
