--- a/code/dev/parts/companies/list.html
+++ b/code/dev/parts/companies/list.html
@@ -137,7 +137,7 @@
                   </div>
                 </td>
                 <td ng-if="auth.isRevadmin()">
-                  <a ng-click="onVendorUpdate(item)">
+                  <a ng-click="onVendorUpdate(item)" class="account-vendor">
                     {{item.vendor_profile}}
                   </a>
                 </td>
