--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -198,6 +198,7 @@
 <script type="text/javascript" src="js/portal/shared/validators/validate-pattern-no-special-chars.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-pattern-comment-no-special-chars.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-query-strings-options.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/validators/validate-uniqueness-in-array-notification-lists.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-uniqueness-in-array.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-waf-location-name.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-wildcard-domain-field.directive.js"></script>
@@ -226,6 +227,7 @@
 <script type="text/javascript" src="js/portal/resources/model/keys.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/locations.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/log_shipping_jobs.factory.js"></script>
+<script type="text/javascript" src="js/portal/resources/model/notificationLists.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/ssl_certs.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/ssl_conf_profiles.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/sslNames.factory.js"></script>
@@ -551,6 +553,13 @@
 <script type="text/javascript" src="js/portal/waf-analytics/filters/wafFilterTops.directive.js"></script>
 <script type="text/javascript" src="js/portal/waf-analytics/filters/wafFilterTopObjects.directive.js"></script>
 <!-- //WAF Analytics -->
+<!-- Notifications  -->
+<script type="text/javascript" src="js/portal/notifications/notifications.module.js"></script>
+<script type="text/javascript" src="js/portal/notifications/notifications.routes.js"></script>
+<script type="text/javascript" src="js/portal/notifications/controller/notificationLists.controller.js"></script>
+<script type="text/javascript" src="js/portal/notifications/account-notification-lists/accountNotificationLists.directive.js"></script>
+<script type="text/javascript" src="js/portal/notifications/notification-list/notificationList.directive.js"></script>
+<!-- // Notifications -->
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
 <script type="text/javascript" src="js/portal/app.routes.js"></script>
