--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -181,6 +181,9 @@
         <a ui-sref-active="active" ui-sref="index.accountSettings.2fa" class="side-menu-sub-item" href="#/2fa">
             <i class="sub-menu-icon fa fa-lock"></i> Security Settings
           </a>
+        <a ui-sref-active="active" ui-sref="index.accountSettings.notificationsList" class="side-menu-sub-item" id="side-menu-sub-item__notifications-list" ng-if="userService.isRevadmin()">
+            <i class="sub-menu-icon fa fa-server "></i>  Notification Lists
+          </a>
         <a ui-sref-active="active" ui-sref="index.accountSettings.cdn-ip-blocks" class="side-menu-sub-item" id="side-menu-sub-item__cdn-ip-bloks">
             <i class="sub-menu-icon fa fa-server "></i>  CDN IP Blocks
           </a>
