--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -38,6 +38,8 @@
 <div ng-message="waf-location-name" class="alert-text alert-text--waf-location-name">Incorrect WAF Location name format</div>
 <!-- message for validate-uniqueness-in-array  -->
 <div ng-message="uniqueness-in-array" class="alert-text alert-text--uniqueness-in-array">The WAF Location name must be uniqueness </div>
+<!-- message for validate-uniqueness-in-array-notification-lists -->
+<div ng-message="uniqueness-in-array-notification-lists" class="alert-text alert-text--uniqueness-in-array-notification-lists">The Notification List name must be uniqueness </div>
 <!-- message for validate-cidr-format -->
 <div ng-message="cidr-format" class="alert-text alert-text--cidr-format">Please use correct CIDR format (for example, 8.8.8.8/32 or 4.4.4.0/24)</div>
 <!-- message for  validate-acl-rule-header-name  -->
