Add Edge Cache Page and updates

--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -94,7 +94,6 @@
         <a id="side-menu-sub-item__reports-proxy" ui-sref-active="active" ui-sref="index.reports.proxy" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-area-chart"></i> Proxy Traffic
           </a>
-        <!--<a ui-sref-active="active" ui-sref="index.reports.edge-cache" class="side-menu-sub-item">Edge Cache Reports</a>-->
         <a ui-sref-active="active" ui-sref="index.reports.topreports" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-pie-chart"></i> Top Reports
           </a>
@@ -109,6 +108,9 @@
           </a>
         <a ui-sref-active="active" ui-sref="index.reports.lm_rtt_heatmaps" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-exchange"></i> RTT Heatmaps
+          </a>
+        <a ui-sref-active="active" ui-sref="index.reports.edge-cache" class="side-menu-sub-item">
+            <i class="sub-menu-icon fa fa-credit-card-alt"></i> Edge Cache
           </a>
         <a ui-sref-active="active" ui-sref="index.reports.imageengine-analytics" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-picture-o" aria-hidden="true"></i> Image Optimization
