Update ttitle - Edge Cache Reports

--- a/code/dev/parts/reports/edge-cache.html
+++ b/code/dev/parts/reports/edge-cache.html
@@ -1,7 +1,7 @@
 <div class="container-fluid report_edge_cache">
   <div class="row">
     <div class="col-md-12">
-      <h2>Edge Cache</h2>
+      <h2>Edge Cache Reports</h2>
     </div>
   </div>
   <div class="row">
