--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -110,7 +110,7 @@
             <i class="sub-menu-icon fa fa-exchange"></i> RTT Heatmaps
           </a>
         <a ui-sref-active="active" ui-sref="index.reports.edge-cache" class="side-menu-sub-item">
-            <i class="sub-menu-icon fa fa-credit-card-alt"></i> Edge Cache
+            <i class="sub-menu-icon fa fa-hdd-o"></i> Edge Cache
           </a>
         <a ui-sref-active="active" ui-sref="index.reports.imageengine-analytics" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-picture-o" aria-hidden="true"></i> Image Optimization
