--- a/code/dev/parts/waf-analytics/waf-events/waf-events.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-events/waf-events.tpl.html
@@ -40,17 +40,26 @@
               <thead>
                 <tr>
                   <th></th>
-                  <th><a href="" ng-click="vm.order('date')">Date/time</a>
+                  <th>
+                    <a href="" ng-click="vm.order('date')">Date/time</a>
                     <span class="sortorder" ng-show="filter.predicate === 'date'" ng-class="{reverse: filter.reverse}"></span>
                   </th>
-                  <th><a href="" ng-click="vm.order('uri')">URL</a>
-                    <span class="sortorder" ng-show="filter.predicate === 'uri'" ng-class="{reverse: filter.reverse}"></span></th>
-                  <th><a href="" ng-click="vm.order('ip')">IP address</a>
-                    <span class="sortorder" ng-show="filter.predicate === 'ip'" ng-class="{reverse: filter.reverse}"></span></th>
-                  <th><a href="" ng-click="vm.order('zone')">Request Zone</a>
-                    <span class="sortorder" ng-show="filter.predicate === 'zone'" ng-class="{reverse: filter.reverse}"></span></th>
-                  <th><a href="" ng-click="vm.order('id')">Triggered Rule Id</a>
-                    <span class="sortorder" ng-show="filter.predicate === 'id'" ng-class="{reverse: filter.reverse}"></span></th>
+                  <th>
+                    <a href="" ng-click="vm.order('uri')">URL</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'uri'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th>
+                    <a href="" ng-click="vm.order('ip')">IP address</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'ip'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th>
+                    <a href="" ng-click="vm.order('zone')">Request Zone</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'zone'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
+                  <th>
+                    <a href="" ng-click="vm.order('id')">Triggered Rule Id</a>
+                    <span class="sortorder" ng-show="filter.predicate === 'id'" ng-class="{reverse: filter.reverse}"></span>
+                  </th>
                 </tr>
               </thead>
               <tbody>
@@ -63,7 +72,11 @@
                   </td>
                   <td>{{ vm.getRelativeDate(item.date) }}</td>
                   <td>{{ item.uri }}</td>
-                  <td>{{ item.ip }}</td>
+                  <td>
+                    <span class="ip-tooltip-holder pos-absolute">
+                      <div class="ipinfo" ng-bind-html="getIpToolTip(item)"></div>
+                      {{ item.ip }}</span>
+                  </td>
                   <td>{{ item.zone }}</td>
                   <td>{{ item.id }} ({{ getRuleDescription(item.id) }})</td>
                 </tr>
@@ -75,7 +88,7 @@
                       <div>URL: {{ item.uri }}</div>
                       <div>End User IP: {{ item.ip }}</div>
                       <div>End User Country: {{ getCountryName(item.country) }}</div>
-                      <div>End User ISP/Organization: </div>
+                      <div>End User ISP/Organization: {{ item.isp || 'No data' }}</div>
                       <!-- TODO: Pull data from maxmind -->
                       <div>Triggered Rule: {{ item.id }} ({{ getRuleDescription(item.id) }})</div>
                       <div>Triggered Zone: {{ item.zone }}</div>
