--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -42,7 +42,7 @@
 <div ng-message="uniqueness-in-array-notification-lists" class="alert-text alert-text--uniqueness-in-array-notification-lists">The Notification List name must be uniqueness </div>
 <!-- message for validate-cidr-format -->
 <div ng-message="cidr-format" class="alert-text alert-text--cidr-format">Please use correct CIDR format (for example, 8.8.8.8/32 or 4.4.4.0/24)</div>
-<!-- message for  validate-acl-rule-header-name  -->
+<!-- message for validate-acl-rule-header-name  -->
 <div ng-message="acl-rule-header-name" class="alert-text alert-text--acl-rule-header-name">Incorrect header-name</div>
-<!-- message for  validate-acl-rule-header-value  -->
-<div ng-message="acl-rule-header-value" class="alert-text alert-text--acl-rule-header-value">Incorrect header-value</div>
+<!-- message for validate-bot-protection-location-name  -->
+<div ng-message="bot-protection-location-name" class="alert-text alert-text--bot-protection-location-name">Incorrect Bot Protection Location name format</div>
