Polish for the Bot Protection domain edit tab

--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -629,7 +629,7 @@
               <!-- //  “WAF” -->
               <hr>
             </uib-tab>
-            <uib-tab index="10" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+            <uib-tab index="10" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Here you can manage Bot Protection configuration for the domain. The service is powered by our partner ShieldSquare.">
               <!--  “Bot Protection” -->
               <uib-tab-heading>Bot Protection <i class="label label-primary pull-right fa beta-functional" aria-hidden="true"> Beta</i></uib-tab-heading>
               <div class="form-group form-inline">
@@ -638,7 +638,7 @@
                   <toggle-switch id="enable_bot_protection" name="enableBotProtection" is-disabled="_loading" ng-model="model.rev_component_bp.enable_bot_protection"
                     on-label="On" off-label="Off">
                   </toggle-switch>
-                  <label for="enableBotProtection" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                  <label for="enableBotProtection" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="This is a general switch for Bot Protection feature. After enabling the feature you will need to do some additional configuration changes.">
                       <i class="fa fa-question-circle"></i>
                     </label>
                 </div>
