Fix bug with ACL

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -298,6 +298,7 @@
 
 <script type="text/javascript" src="js/portal/domains/domain-staging-status/domainStagingStatus.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-acl-rules/domainACLRulesList.directive.js"></script>
+<script type="text/javascript" src="js/portal/domains/domain-acl-rules/domainACLRulesItem.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-bot-protection-list/domainBotProtectionList.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-caching-rule/domainCachingRule.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-check-integration/domainCheckIntegration.directive.js"></script>
